<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Search</string>
    <string name="title_activity_search">Image Search</string>
    <string name="srch_btn_lbl">Search</string>
    <string name="srch_box_hint">Enter search term</string>
    <string name="title_activity_image_display">Image Detail</string>
    <string name="settings_title">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="clear_btn_title">Clear</string>
    <string name="image_size_label">Image size:</string>
    <string name="small_size_lbl">Small</string>
    <string name="medium_size_lbl">Medium</string>
    <string name="large_size_lbl">Large</string>
    <string name="color_lbl">Color:</string>
    <string name="any_colors_lbl">Any</string>
    <string name="black_and_white_lbl">Black &amp; White Only</string>
    <string name="color_only_lbl">Color Only</string>
    <string name="safesearch_lbl">Safe Search:</string>
    <string name="safesearch_toggle">Safe search On/Off</string>
    <string name="save_btn_lbl">Save</string>
    <string name="any_size_lbl">Any</string>

</resources>
