<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/tvImageSizeLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:text="@string/image_size_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/rgImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImageSizeLbl" >

        <RadioButton
            android:id="@+id/rSmallSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/small_size_lbl" />

        <RadioButton
            android:id="@+id/rMediumSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_size_lbl" />

        <RadioButton
            android:id="@+id/rLargeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_size_lbl" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvColorLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rgImageSize"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/color_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/rgColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvColorLbl" >

        <RadioButton
            android:id="@+id/rAllColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/all_colors_lbl" />

        <RadioButton
            android:id="@+id/rBlackAndWhiteOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_and_white_lbl" />

        <RadioButton
            android:id="@+id/rColorOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_only_lbl" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvSafeSearchLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/rgColor"
        android:text="@string/safesearch_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ToggleButton
        android:id="@+id/tbSafeSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSafeSearchLbl"
        android:layout_alignBottom="@+id/tvSafeSearchLbl"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tvSafeSearchLbl"
        android:text="@string/safesearch_toggle" />

</RelativeLayout>
