<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="${packageName}.${activityClass}" >

    <EditText
        android:id="@+id/etSearchBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btnSearch"
        android:ems="10"
        android:hint="@string/srch_box_hint"
        android:maxLines="1" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etSearchBox"
        android:layout_alignParentRight="true"
        android:text="@string/srch_btn_lbl"
        android:onClick="onSearchButtonClick" />

    <GridView
        android:id="@+id/gvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnSearch"
        android:numColumns="3" >
    </GridView>

    <ImageButton
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etSearchBox"
        android:layout_alignTop="@+id/etSearchBox"
        android:layout_alignBottom="@+id/etSearchBox"
        android:layout_marginRight="8dp"
        android:onClick="onClear"
        android:background="@android:color/transparent"
        android:contentDescription="@string/clear_btn_title"
        android:src="@drawable/x_mark_icon" />

</RelativeLayout>
